Fixing compilation issue in JDK-17.